--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+
+
 <body>
     <header>ALURAFLIX</header>
     <h1>Hollow Knight - Release Trailer</h1>
