--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <section>
         <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-            <p>#homem-aranha</p>
+            <h1>Hollow Knight - Release Traile</h1>
+            <p><div id="Hollow-Knight"></div></p>
         </div>
 
         <div>
