--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>ALURAFLIX</header>
 
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>Hollow Knight - Release Traile</h1>
             <p><div id="Hollow-Knight"></div></p>
         </div>
