--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <header>ALURAFLIX</header>
 
     <section>
-        <div class="chamada-texto">
-            <h1>Hollow Knight - Release Traile</h1>
+        <div>
+            <h1>Hollow Knight - Release Trailer</h1>
             <p><div id="Hollow-Knight"></div></p>
         </div>
 
@@ -24,3 +24,6 @@
 </body>
 
 </html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
