--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </section>
 
 <section>
-    <h2>Filmes e séries</h2>
+    <h2>trailer de jogos</h2>
     <div>
-      <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+      <a href="https://youtu.be/CYTyQ9886eU?si=T3O3YPGfjXGgN6xa">
         <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
       </a>
       <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
