--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 <section>
     <h2>trailer de jogos</h2>
     <div>
-      <img src="https://img.youtube.com/vi/mePRt9K4a3c/maxresdefault.jpg" />
-        <img src="https://img.youtube.com/vi/mePRt9K4a3c/maxresdefault.jpg" />
+      <img src="https://youtu.be/kE7li_u1nmg?si=HfReZbZrzaHi94BB" />
+        <img src="https://img.youtube.com/vi/kE7li_u1nmg/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+      <a href="https://youtu.be/u83VdXAVq08?si=BVbOZNWWt0Bl4aWy">
         <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-        <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+      <a href="https://youtu.be/u83VdXAVq08?si=ILWvLaONFrBID9DB">
+        <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+      <a href="https://youtu.be/b-ugdyfd0ao?si=3CF7LPpgQEn23a2_">
         <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-        <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+      <a href="https://youtu.be/b-ugdyfd0ao?si=NEQ4qll_CBPCGNVa">
+        <img src="https://img.youtube.com/vi/b-ugdyfd0ao/maxresdefault.jpg" />
       </a>
     </div>
   </section>
