--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section>
     <h2>trailer de jogos</h2>
     <div>
-      <img src="https://youtu.be/kE7li_u1nmg?si=HfReZbZrzaHi94BB" />
+      <img src="https://youtu.be/kE7li_u1nmg?si=44_1JXItbjqCEI8U" />
         <img src="https://img.youtube.com/vi/kE7li_u1nmg/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/u83VdXAVq08?si=BVbOZNWWt0Bl4aWy">
