--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p><div id="Hollow-Knight"></div></p>
         </div>
 
-        <div>
+        <div>https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4?si=xBcBJoa50l6knCJb"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -33,8 +33,8 @@
       <a href="https://youtu.be/u83VdXAVq08?si=ILWvLaONFrBID9DB">
         <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
-      <a href="https://youtu.be/b-ugdyfd0ao?si=3CF7LPpgQEn23a2_">
-        <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+      <a href="https://youtu.be/b-ugdyfd0ao?si=3CF7LPpgQEn23a2">
+        <img src="https://img.youtube.com/vi/c50gFkG91jc/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/b-ugdyfd0ao?si=NEQ4qll_CBPCGNVa">
         <img src="https://img.youtube.com/vi/b-ugdyfd0ao/maxresdefault.jpg" />
