--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="https://youtu.be/u83VdXAVq08?si=ILWvLaONFrBID9DB">
         <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
-      <a href="https://youtu.be/b-ugdyfd0ao?si=3CF7LPpgQEn23a2">
+      <a href="https://youtu.be/c50gFkG91jc?si=6wr_wGWA1PbmT6XX">
         <img src="https://img.youtube.com/vi/c50gFkG91jc/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/b-ugdyfd0ao?si=NEQ4qll_CBPCGNVa">
