--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <section>
     <h2>trailer de jogos</h2>
     <div>
-      <img src="https://youtu.be/kE7li_u1nmg?si=44_1JXItbjqCEI8U" />
-        <img src="https://img.youtube.com/vi/kE7li_u1nmg/maxresdefault.jpg" />
+      <img src="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
+        <img src="https://img.youtube.com/vi/xjbxG5VEo4M/maxresdefault.jpg" />
       </a>
-      <a href="https://youtu.be/u83VdXAVq08?si=BVbOZNWWt0Bl4aWy">
-        <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+      <a href="https://youtu.be/u83VdXAVq08?si=zAlrm8ofJk4-YVKj">
+        <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
-      <a href="https://youtu.be/u83VdXAVq08?si=ILWvLaONFrBID9DB">
+      <a href="https://youtu.be/c50gFkG91jc?si=f0A1b5gr2T4ccD3b">
         <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/c50gFkG91jc?si=6wr_wGWA1PbmT6XX">
