--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/c50gFkG91jc?si=f0A1b5gr2T4ccD3b">
-        <img src="https://img.youtube.com/vi/u83VdXAVq08/maxresdefault.jpg" />
+        <img src="https://img.youtube.com/vi/c50gFkG91jc/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/NN-9SQXoi50?si=iROAqFur4tb1LnmM">
-        <img src="https://img.youtube.com/vi/NN-9SQXoi50/maxresdefault.jpg" />
+        <img src="https://img.youtube.com/vi/NN-9SQXoi50/maxresdefault.jpg[]
+        " />
       </a>
       <a href="https://youtu.be/b-ugdyfd0ao?si=NEQ4qll_CBPCGNVa">
         <img src="https://img.youtube.com/vi/b-ugdyfd0ao/maxresdefault.jpg" />
