--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <img src="https://img.youtube.com/vi/c50gFkG91jc/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/NN-9SQXoi50?si=iROAqFur4tb1LnmM">
-        <img src="https://img.youtube.com/vi/NN-9SQXoi50/maxresdefault.jpg[]
-        " />
+        <img src="https://img.youtube.com/vi/NN-9SQXoi50/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/b-ugdyfd0ao?si=NEQ4qll_CBPCGNVa">
         <img src="https://img.youtube.com/vi/b-ugdyfd0ao/maxresdefault.jpg" />
