--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </section>
 
 <section>
-    <h2>trailer de jogos</h2>
+    <h2>trailer de jogos e filmes </h2>
     <div>
-      <img src="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
+      <a href="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
         <img src="https://img.youtube.com/vi/xjbxG5VEo4M/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/u83VdXAVq08?si=zAlrm8ofJk4-YVKj">
