--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </section>
 
-<section>
+<section class = "categoria">
     <h2>trailer de jogos e filmes </h2>
     <div>
       <a href="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
