--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
 <section class = "categoria">
-    <h2>trailer de jogos e filmes </h2>
+    <h2>trailers</h2>
     <div>
       <a href="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
         <img src="https://img.youtube.com/vi/xjbxG5VEo4M/maxresdefault.jpg" />
