--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </div>
     </section>
 
-<section class = "categoria">
+<section class = "categoria"
+ <div class="categoria-videos"></div>
+   
     <h2>trailers</h2>
     <div>
       <a href="https://youtu.be/xjbxG5VEo4M?si=-be_ULyNP6Kc__Er" />
